DZ: more plugins

--- a/dist.ini
+++ b/dist.ini
@@ -6,13 +6,14 @@ copyright_year   = 2011
 
 version = 0.001
 
-[@Classic]
+[@Basic]
 
-;GItHub::Meta requires to be online
+;GitHub::Meta requires to be online
 ;Not convenient when travelling in the Thalys (back from the QA Hackathon 2011)
-;[GitHub::Meta]
-;repo = p5-Patch-Zilla
-;homepage = 1
+[GithubMeta]
+user = dolmen
+repo = p5-Patch-Zilla
+issues = 0
 
 [PruneFiles]
 ; The original 
@@ -26,3 +27,7 @@ Pod::Weaver::Section::Encoding = 0
 [MetaJSON]
 
 [PodWeaver]
+
+[Test::EOL]
+
+[AutoPrereqs]
